--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             <span class="nav__logo--web">Web</span>
             <span class="nav__logo--studio">Studio</span></a
           >
+
+          <button
+            class="openMenu-button page-header__openMenu-button js-open-menu"
+            aria-label="відкритя меню навігації"
+          >
+            <svg class="openMenu-button__icon" width="40" height="40">
+              <use href="./images/icons.svg#icon-menu_40px" />
+            </svg>
+          </button>
+
           <ul class="nav__list">
             <li>
               <a class="nav__page--active" href="./index.html">
@@ -682,5 +692,6 @@
     <!------------------------Кінець Підвал з посиланями і адресами ------------------------->
 
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
