--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
       <!--------------------Кінець Блок заказу послуги----------------------------------->
 
       <!-----------------Блок навішування лапші яка фірма класна------------------------->
-      <section class="approach">
-        <div class="approach__container">
+      <section>
+        <div class="approach">
           <h2 class="hide">подход к проектам</h2>
 
           <ul class="approach-card__list">
