--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <h2 class="hide">подход к проектам</h2>
 
           <ul class="approach-card__list">
-            <li>
+            <li class="approach__item">
               <div class="approach-card__inner">
                 <svg class="approach-card__svg" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
@@ -198,7 +198,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="approach__item">
               <div class="approach-card__inner">
                 <svg class="approach-card__svg" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -211,7 +211,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="approach__item">
               <div class="approach-card__inner">
                 <svg class="approach-card__svg" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -224,7 +224,7 @@
               </p>
             </li>
 
-            <li>
+            <li class="approach__item">
               <div class="approach-card__inner">
                 <svg class="approach-card__svg" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
