--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
         <div>
           <ul class="client-card__list">
-            <li>
+            <li class="client-card__item">
               <a class="client-card__link" href="www.saytklienta.com">
                 <div class="client-card__svg">
                   <svg width="44.27" height="49.23">
@@ -543,7 +543,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="client-card__item">
               <a class="client-card__link" href="www.saytklienta.com">
                 <div class="client-card__svg">
                   <svg width="44.27" height="49.23">
@@ -553,7 +553,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="client-card__item">
               <a class="client-card__link" href="www.saytklienta.com">
                 <div class="client-card__svg">
                   <svg width="44.27" height="49.23">
@@ -563,7 +563,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="client-card__item">
               <a class="client-card__link" href="www.saytklienta.com">
                 <div class="client-card__svg">
                   <svg width="44.27" height="49.23">
@@ -573,7 +573,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="client-card__item">
               <a class="client-card__link" href="www.saytklienta.com">
                 <div class="client-card__svg">
                   <svg width="44.27" height="49.23">
@@ -583,7 +583,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="client-card__item">
               <a class="client-card__link" href="www.saytklienta.com">
                 <div class="client-card__svg">
                   <svg width="44.27" height="49.23">
