--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
             <span class="nav__logo--web">Web</span>
             <span class="nav__logo--studio">Studio</span></a
           >
+
           <ul class="nav__list">
             <li>
               <a href="./index.html"> <span class="nav__page">Студия</span></a>
@@ -38,26 +39,35 @@
               <a href="#contacts"> <span class="nav__page">Контакты</span></a>
             </li>
           </ul>
+
+          <ul class="contacts">
+            <li>
+              <a class="contacts__Information" href="mailto:Info@exampie.com">
+                <svg class="contacts__svg" width="16" height="12">
+                  <use href="./images/icons.svg#icon-mail"></use></svg
+                >Info@exampie.com
+              </a>
+            </li>
+
+            <li>
+              <a class="contacts__Information" href="tel:+380991111111">
+                <svg class="contacts__svg" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+                +38 099 111 11 11
+              </a>
+            </li>
+          </ul>
         </nav>
-
-        <ul class="contacts">
-          <li>
-            <a class="contacts__Information" href="mailto:Info@exampie.com">
-              <svg class="contacts__svg" width="16" height="12">
-                <use href="./images/icons.svg#icon-mail"></use></svg
-              >Info@exampie.com
-            </a>
-          </li>
-
-          <li>
-            <a class="contacts__Information" href="tel:+380991111111">
-              <svg class="contacts__svg" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg>
-              +38 099 111 11 11
-            </a>
-          </li>
-        </ul>
+        <button
+          type="button"
+          class="menu-toggle js-open-menu"
+          aria-label="відкритя меню навігації"
+        >
+          <svg class="mobile-menu__icon" width="40" height="40">
+            <use href="/images/icons.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-------------------------Кінець Шапка з навігацією----------------------------------->
@@ -433,5 +443,71 @@
       </div>
     </footer>
     <!------------------------Кінець Підвал з посиланями і адресами ------------------------->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="closeMenu-button__icon" width="40" height="40">
+          <use href="./images/icons.svg#icon-close_40px" />
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li class="link">
+          <a class="nav__page--active" href="./index.html">
+            <span class="nav__page">Студия</span></a
+          >
+        </li>
+
+        <li class="link">
+          <a href="./portfolio.html">
+            <span class="nav__page">Портфолио</span></a
+          >
+        </li>
+
+        <li class="link">
+          <a href="#contacts"> <span class="nav__page">Контакты</span></a>
+        </li>
+      </ul>
+      <ul class="mobile-menu">
+        <li>
+          <a class="contacts__Information" href="tel:+380991111111">
+            +38 099 111 11 11
+          </a>
+        </li>
+
+        <li>
+          <a
+            class="contacts__Information--mail-color"
+            href="mailto:Info@exampie.com"
+          >
+            Info@devstudio.com
+          </a>
+        </li>
+      </ul>
+      <div>
+        <ul class="mobile-menu__social">
+          <li>
+            <a class="mobile-menu__link" href="instagram.com"
+              >Instagram <span class="mobile-menu__cheat">|</span></a
+            >
+          </li>
+          <li>
+            <a class="mobile-menu__link" href="twitter.com"
+              >Twitter <span class="mobile-menu__cheat">|</span></a
+            >
+          </li>
+          <li>
+            <a class="mobile-menu__link" href="facebook.com"
+              >facebook <span class="mobile-menu__cheat">|</span></a
+            >
+          </li>
+          <li>
+            <a class="mobile-menu__link" href="linkedin.com">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
