--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
               <div class="team__card-tumb">
                 <img
                   class="team__photo"
+                  srcset="./images/our_team/img.jpg 1x, ./images/our_team/img@2x 2x."
                   src="./images/our_team/img.jpg"
                   alt="Фото Ігора Демяненко"
-                  width="270"
                 />
               </div>
 
@@ -355,9 +355,12 @@
               <div class="team__card-tumb">
                 <img
                   class="team__photo"
+                  srcset="
+                    ./images/our_team/img1.jpg,
+                    ./images/our_team/img1@2x.
+                  "
                   src="./images/our_team/img1.jpg"
                   alt="Фото Ігора Демяненко"
-                  width="270"
                 />
               </div>
 
@@ -412,9 +415,12 @@
               <div class="team__card-tumb">
                 <img
                   class="team__photo"
+                  srcset="
+                    ./images/our_team/img2.jpg,
+                    ./images/our_team/img2@2x.
+                  "
                   src="./images/our_team/img2.jpg"
                   alt="Фото Ігора Демяненко"
-                  width="270"
                 />
               </div>
 
@@ -470,9 +476,12 @@
               <div class="team__card-tumb">
                 <img
                   class="team__photo"
+                  srcset="
+                    ./images/our_team/img3.jpg,
+                    ./images/our_team/img3@2x.
+                  "
                   src="./images/our_team/img3.jpg"
                   alt="Фото Ігора Демяненко"
-                  width="270"
                 />
               </div>
 
