--- a/index.html
+++ b/index.html
@@ -734,22 +734,22 @@
       <div>
         <ul class="mobile-menu__social">
           <li>
-            <a class="mobile-menu__link" href="instagram.com"
-              >Instagram <span class="mobile-menu__cheat">|</span></a
+            <a class="mobile-menu__link" href="instagram.com">
+              Instagram <span class="mobile-menu__cheat">|</span></a
             >
           </li>
           <li>
-            <a class="mobile-menu__link" href="twitter.com"
-              >Twitter <span class="mobile-menu__cheat">|</span></a
+            <a class="mobile-menu__link" href="twitter.com">
+              Twitter <span class="mobile-menu__cheat">|</span></a
             >
           </li>
           <li>
-            <a class="mobile-menu__link" href="facebook.com"
-              >facebook <span class="mobile-menu__cheat">|</span></a
+            <a class="mobile-menu__link" href="facebook.com">
+              facebook <span class="mobile-menu__cheat">|</span></a
             >
           </li>
           <li>
-            <a class="mobile-menu__link" href="linkedin.com">LinkedIn</a>
+            <a class="mobile-menu__link" href="linkedin.com"> LinkedIn </a>
           </li>
         </ul>
       </div>
